# multisight-vakit

./: CMakeLists.txt  readme.txt
include/VAKit/: BitStream.h  NALTypes.h  VAH264Decoder.h  VAH264Encoder.h
source/: BitStream.cpp  NALTypes.cpp  VAH264Decoder.cpp  VAH264Encoder.cpp
tools/dec/: CMakeLists.txt  README.TXT  custom.spec  packaging.cmake
tools/dec/source/: main.cpp
